<resources>
    <string name="app_name">L.T.L</string>
    <string name="title">Learning to listen</string>
    <string name="title_information">Information</string>
    <string name="play">PLAY</string>
    <string name="setting">SETTINGS</string>
    <string name="information">INFO</string>
    <string name="content_information">Team\nTeam 44 consists of  3 members\nRomana Nagyova (team leader),  studying Mathematical Computation\nMengyang Wu, studying Computer Science\nVlad Popa, studying Computer Science\nAll of us are in first year of University College London.\n\n</string>
    <string name="client_information">Client\nOur client Stuart Ross is from UCL Speech, Hearing and Phonetic Sciences. In this project, we are developing an Android application providing visual guides with voice for children. The application has a simple game-like format. Its main purpose is to train children to understand speech in noise and improve their concentration.</string>
    <string name="project_information">\nProject\nA set of numbers is displayed, accompanied with an animal of the users choice. Each number is of a different colour. The user needs to identify what number, colour and animal the voice is telling them to click on.\nFurthemore, there is a background noise, which makes it challenging to hear the target voice. This is calculated via signal to noise ratio, which increases/decreases directly proportional to right/wrong answers, respectively. Signal to noise ratio will further be referred to as SNR.\nThe data from result are displayed in a graph, where X axis represents the numbers of trials and Y axis stands for signal to noise ratio. Results are stored in server and sent to both our client and the user.</string>
    <string name="choose_animals">Choose your favorite animals\n</string>
    <string name="choose_speakers">\nChoose speakers\n</string>
    <string name="choose_difficulties">\nChoose difficulties\n</string>
    <string name="choose_orientation">\nChoose orientation\n</string>
    <string name="orientation_left">on the left</string>
    <string name="orientation_right">on the right</string>
    <string name="orientation_both">face to face</string>
    <string name="setting_email_address">\nSet your email address here for receiving results\n</string>
    <string name="agreement_share_data">\nDo you agree to share your results with researchers at UCL?\n</string>
    <string name="saving">SAVE</string>
    <string name="send_email">Would you like to have a copy of your results?</string>
    <string name="guide_send_email">Edit your email address and press OK to send</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string-array name="difficulties">
        <item>EASY</item>
        <item>NORMAL</item>
        <item>CRAZY</item>
    </string-array>

</resources>