<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="romana.vlad.mengyang.learningtolisten.GraphResultActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart_grade"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linechart_grade"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/send_email"
        android:textIsSelectable="false"
        android:textSize="18dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_send_email"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/guide_send_email"
        android:textIsSelectable="false"
        android:textSize="18dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail"
        android:layout_below="@+id/send_email"
        android:background="@drawable/rounded_button"
        android:onClick="onClickOK"
        android:text="@string/button_ok" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editEmail"
        android:layout_alignRight="@+id/editEmail"
        android:layout_below="@+id/send_email"
        android:background="@drawable/rounded_button"
        android:onClick="onClickCancel"
        android:text="@string/button_cancel" />

</RelativeLayout>
