<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.campustory.wumengyang.vivohello.SettingsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/setting_animals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/choose_animals"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/imageButtonDog"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignLeft="@id/setting_animals"
                android:layout_below="@+id/setting_animals"
                android:background="@null"
                android:onClick="onClickDog"
                android:scaleType="fitXY"
                android:src="@drawable/dog" />

            <ImageButton
                android:id="@+id/imageButtonPig"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignRight="@+id/setting_animals"
                android:layout_below="@id/setting_animals"
                android:background="@null"
                android:onClick="onClickPig"
                android:scaleType="fitXY"
                android:src="@drawable/pig" />

            <ImageButton
                android:id="@+id/imageButtonCat"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignLeft="@+id/imageButtonDog"
                android:layout_below="@id/imageButtonDog"
                android:background="@null"
                android:onClick="onClickCat"
                android:scaleType="fitXY"
                android:src="@drawable/cat" />

            <ImageButton
                android:id="@+id/imageButtonCow"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignRight="@+id/imageButtonPig"
                android:layout_below="@id/imageButtonPig"
                android:background="@null"
                android:onClick="onClickCow"
                android:scaleType="fitXY"
                android:src="@drawable/cow" />

            <ImageButton
                android:id="@+id/imageButtonDuck"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignLeft="@+id/imageButtonCat"
                android:layout_below="@id/imageButtonCat"
                android:background="@null"
                android:onClick="onClickDuck"
                android:scaleType="fitXY"
                android:src="@drawable/duck" />

            <ImageButton
                android:id="@+id/imageButtonSheep"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignRight="@+id/imageButtonCow"
                android:layout_below="@id/imageButtonCow"
                android:background="@null"
                android:onClick="onClickSheep"
                android:scaleType="fitXY"
                android:src="@drawable/sheep" />

            <ImageView
                android:id="@+id/checkMarkdog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonDog"
                android:layout_alignRight="@+id/imageButtonDog"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkcat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonCat"
                android:layout_alignRight="@+id/imageButtonCat"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkduck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonDuck"
                android:layout_alignRight="@+id/imageButtonDuck"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkpig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonPig"
                android:layout_alignRight="@+id/imageButtonPig"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkcow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonCow"
                android:layout_alignRight="@+id/imageButtonCow"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarksheep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonSheep"
                android:layout_alignRight="@+id/imageButtonSheep"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/settings_speakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/imageButtonDuck"
                android:layout_below="@id/imageButtonDuck"
                android:gravity="center"
                android:text="@string/choose_speakers"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/imageButtonChild"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@id/settings_speakers"
                android:layout_below="@+id/settings_speakers"
                android:background="@null"
                android:onClick="onClickChild"
                android:scaleType="fitXY"
                android:src="@drawable/child" />

            <ImageButton
                android:id="@+id/imageButtonWoman"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/settings_speakers"
                android:layout_toRightOf="@id/imageButtonChild"
                android:background="@null"
                android:onClick="onClickWoman"
                android:scaleType="fitXY"
                android:src="@drawable/woman" />

            <ImageButton
                android:id="@+id/imageButtonMan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/settings_speakers"
                android:layout_toRightOf="@id/imageButtonWoman"
                android:background="@null"
                android:onClick="onClickMan"
                android:scaleType="fitXY"
                android:src="@drawable/man" />

            <ImageView
                android:id="@+id/checkMarkChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonChild"
                android:layout_alignRight="@+id/imageButtonChild"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonWoman"
                android:layout_alignRight="@+id/imageButtonWoman"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonMan"
                android:layout_alignRight="@+id/imageButtonMan"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/settings_orientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/imageButtonChild"
                android:layout_below="@id/imageButtonChild"
                android:gravity="center"
                android:text="@string/choose_orientation"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/imageButtonLeft"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@id/settings_orientation"
                android:layout_below="@+id/settings_orientation"
                android:background="@null"
                android:onClick="onClickOrientation"
                android:scaleType="fitXY"
                android:src="@drawable/left" />

            <ImageButton
                android:id="@+id/imageButtonBoth"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/settings_orientation"
                android:layout_toRightOf="@id/imageButtonLeft"
                android:background="@null"
                android:onClick="onClickOrientation"
                android:scaleType="fitXY"
                android:src="@drawable/both" />

            <ImageButton
                android:id="@+id/imageButtonRight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/settings_orientation"
                android:layout_toRightOf="@id/imageButtonBoth"
                android:background="@null"
                android:onClick="onClickOrientation"
                android:scaleType="fitXY"
                android:src="@drawable/right" />

            <ImageView
                android:id="@+id/checkMarkLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonLeft"
                android:layout_alignLeft="@+id/imageButtonLeft"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonRight"
                android:layout_alignRight="@+id/imageButtonRight"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/checkMarkBoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageButtonBoth"
                android:layout_centerHorizontal="true"
                android:src="@drawable/check_mark"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/settings_difficulties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/imageButtonLeft"
                android:layout_below="@id/imageButtonLeft"
                android:gravity="center"
                android:text="@string/choose_difficulties"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/difficulties_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_difficulties"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/settings_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/difficulties_spinner"
                android:layout_below="@id/difficulties_spinner"
                android:gravity="center"
                android:text="@string/setting_email_address"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edit_email_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_email"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/share_data_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email_settings"
                android:gravity="center"
                android:text="@string/agreement_share_data"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <CheckBox
                android:id="@+id/setting_is_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/share_data_agreement"
                android:layout_below="@id/share_data_agreement"
                android:text="Agree" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
